[#81639428] supress timestamps in smart_form; fix spacing on dl

--- a/app/assets/stylesheets/express_admin/shared/_layout_components.sass
+++ b/app/assets/stylesheets/express_admin/shared/_layout_components.sass
@@ -46,9 +46,10 @@
       padding-right: 1em
 
     dd
-      min-width: 80%
+      min-width: 70%
     dt
       min-width: 12em
+      overflow: wrap
     dl
       display: flex
       flex-wrap: wrap
